--- a/src/packages/editor.scss
+++ b/src/packages/editor.scss
@@ -11,6 +11,36 @@
     background-color: red;
   }
 
+  &-left {
+    &-item {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: #fff;
+      padding: 20px;
+      cursor: move;
+      user-select: none;
+      margin: 20px auto;
+      min-height: 150px;
+      box-sizing: border-box;
+      position: relative;
+      > span {
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin-bottom: 20px;
+        font-weight: 700;
+        background-color: skyblue;
+        color: white;
+        padding: 5px 10px;
+      }
+      > div {
+        align-self: center;
+      }
+    }
+  }
+
   .editor-middle {
     width: calc(100% - 40%);
     background-color: skyblue;
