--- a/src/packages/editor.scss
+++ b/src/packages/editor.scss
@@ -1,3 +1,5 @@
+@import "../iconfont/iconfont.css";
+
 .editor {
   width: 100%;
   height: 100%;
@@ -6,7 +8,6 @@
   &-right {
     position: absolute;
     width: 270px;
-    background-color: red;
     height: 100%;
   }
 
@@ -54,7 +55,24 @@
     right: 280px;
     left: 280px;
     height: 80px;
-    background-color: burlywood;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &-button {
+      width: 60px;
+      height: 60px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(0, 0, 0, 0.3);
+      color: #fff;
+      user-select: none;
+      cursor: pointer;
+      & + & {
+        margin-left: 3px;
+      }
+    }
   }
 
   &-container {
@@ -96,12 +114,20 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  border-left: 2px dashed red;
+  // border-left: 2px dashed red !important;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(to bottom, red 0%, transparent 50%, red 50%, transparent 100%) repeat-y;
+  background-size: 2px 10px;
 }
 
 .line-y {
   position: absolute;
   left: 0;
   right: 0;
-  border-top: 2px dashed red;
+  // border-top: 2px dashed red !important;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to right, red 0%, transparent 50%, red 50%, transparent 100%) repeat-x;
+  background-size: 10px 2px;
 }
