--- a/src/iconfont/iconfont.css
+++ b/src/iconfont/iconfont.css
@@ -1,6 +1,8 @@
 @font-face {
-  font-family: "iconfont"; /* Project id  */
-  src: url('iconfont.ttf?t=1692180537761') format('truetype');
+  font-family: "iconfont"; /* Project id 4215288 */
+  src: url('iconfont.woff2?t=1692279915224') format('woff2'),
+       url('iconfont.woff?t=1692279915224') format('woff'),
+       url('iconfont.ttf?t=1692279915224') format('truetype');
 }
 
 .iconfont {
@@ -11,11 +13,39 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-bianji:before {
+  content: "\e6b0";
+}
+
+.icon-zitiyulan:before {
+  content: "\ec86";
+}
+
 .icon-chexiao:before {
   content: "\e734";
 }
 
+.icon-shanchu:before {
+  content: "\e718";
+}
+
+.icon-daochu:before {
+  content: "\eabf";
+}
+
+.icon-daoru:before {
+  content: "\eac0";
+}
+
+.icon-zhiding:before {
+  content: "\eb16";
+}
+
 .icon-zhongzuo:before {
   content: "\e66b";
+}
+
+.icon-zhidi:before {
+  content: "\e68e";
 }
 
