增加右侧属性栏、增加范围选择器物料

--- a/src/iconfont/iconfont.css
+++ b/src/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4215288 */
-  src: url('iconfont.woff2?t=1692279915224') format('woff2'),
-       url('iconfont.woff?t=1692279915224') format('woff'),
-       url('iconfont.ttf?t=1692279915224') format('truetype');
+  src: url('iconfont.woff2?t=1692337067748') format('woff2'),
+       url('iconfont.woff?t=1692337067748') format('woff'),
+       url('iconfont.ttf?t=1692337067748') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-guanbi:before {
+  content: "\e659";
 }
 
 .icon-bianji:before {
