--- a/src/packages/editor.scss
+++ b/src/packages/editor.scss
@@ -111,7 +111,7 @@
     border: 2px dashed red;
   }
 }
-.editor-block-preview{
+.editor-block-preview {
   &::after {
     display: none;
   }
@@ -121,20 +121,59 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  // border-left: 2px dashed red !important;
-  width: 2px;
-  height: 100%;
-  background: linear-gradient(to bottom, red 0%, transparent 50%, red 50%, transparent 100%) repeat-y;
-  background-size: 2px 10px;
+  border-left: 2px dashed red;
+
+  // 用background画虚线
+  //   width: 2px;
+  //   height: 100%;
+  //   background: linear-gradient(to bottom, red 0%, transparent 50%, red 50%, transparent 100%)
+  //     repeat-y;
+  //   background-size: 2px 10px;
 }
 
 .line-y {
   position: absolute;
   left: 0;
   right: 0;
-  // border-top: 2px dashed red !important;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(to right, red 0%, transparent 50%, red 50%, transparent 100%) repeat-x;
-  background-size: 10px 2px;
+  border-top: 2px dashed red;
+
+  // 用background画虚线
+  // width: 100%;
+  // height: 2px;
+  // background: linear-gradient(to right, red 0%, transparent 50%, red 50%, transparent 100%) repeat-x;
+  // background-size: 10px 2px;
+}
+
+.dropdown {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  box-shadow: 2px 2px #ccc;
+}
+.dropdown-isShow {
+  display: block;
+}
+
+.dropdown-item {
+  line-height: 30px;
+  width: 100px;
+  border-bottom: 1px solid #ccc;
+  text-align: center;
+  cursor: pointer;
+}
+
+.range {
+  display: inline-flex;
+  width: 220px;
+  min-height: 30px;
+  align-items: center;
+  input {
+    flex: 1;
+    width: 100%;
+    height: 100%;
+  }
+  span {
+    margin: 0;
+    display: inline-flex;
+  }
 }
